Added Add to cart feature

--- a/src/main/resources/Flipkart.properties
+++ b/src/main/resources/Flipkart.properties
@@ -2,3 +2,11 @@ login_button=
 
 #PropertyName=PropertyValue
 #WebElementName=Xpath
+
+
+#loginButton=//a[@class='wsejfv']
+#Email=//label[@class='Gq-80a']
+#SearchProduct=//input[@name='q']
+#ProductTitle=//span[@class='VU-ZEz']
+#RequestOTP=//button[text()='Request OTP']
+#AddToCart=//button[@class='QqFHMw vslbG+ In9uk2']
