--- a/src/main/resources/locators/Flipkart.properties
+++ b/src/main/resources/locators/Flipkart.properties
@@ -4,4 +4,6 @@ login_button=
 #WebElementName=Xpath
 
 searchBar=//input[@placeholder='Search for Products, Brands and More']
-BecomeASeller=//a[@title='Become a Seller'][2]
+becomeASeller=//a[@title='Become a Seller'][2]
+sellonline=//span[text()='Sell Online with Flipkart']
+
