Added Search Products

--- a/src/main/resources/Flipkart.properties
+++ b/src/main/resources/Flipkart.properties
@@ -2,3 +2,25 @@ login_button=
 
 #PropertyName=PropertyValue
 #WebElementName=Xpath
+
+
+search bar=//input[@placeholder='Search for Products, Brands and More']
+
+
+//button/*[name()='svg'] 
+
+first toy in search results=//div[@class='_4WELSP']
+
+specifications of the selected toy=//div[@class='_8tSq3v']
+
+//button[@fdprocessedid='sidah'] (When I add the toy to my cart)
+
+//div[@class='ZuSA--'](Then I should see the toy added to my cart)
+
+//button[@fdprocessedid='r4194i'] (When I clicked on the Buy Now button to buy the product)
+
+//div[@class='_9-suWS'] (Cash on Delivery Payments Page]
+
+//span[text()='Place Order'] ( When I click on Pay Now and complete the payment)
+
+//div[contains(text(), 'Payment Successful')]
