--- a/src/main/resources/locators/Flipkart.properties
+++ b/src/main/resources/locators/Flipkart.properties
@@ -7,3 +7,22 @@ searchBar=//input[@placeholder='Search for Products, Brands and More']
 becomeASeller=//a[@title='Become a Seller'][2]
 sellonline=//span[text()='Sell Online with Flipkart']
 
+
+//button/*[name()='svg'] 
+
+first toy in search results=//div[@class='_4WELSP']
+
+specifications of the selected toy=//div[@class='_8tSq3v']
+
+add the toy to my cart=//button[@fdprocessedid='sidah']
+
+toy added to my cart=//div[@class='ZuSA--']
+
+Buy Now button to buy the product=//button[@fdprocessedid='r4194i'] 
+
+Delivery Payments Page=//div[@class='_9-suWS']
+
+Pay Now and complete the payment=//span[text()='Place Order']
+
+Payment Successfull=//div[contains(text(), 'Payment Successful')]
+
