--- a/src/main/resources/locators/Flipkart.properties
+++ b/src/main/resources/locators/Flipkart.properties
@@ -7,3 +7,11 @@ searchBar=//input[@placeholder='Search for Products, Brands and More']
 becomeASeller=//a[@title='Become a Seller'][2]
 sellonline=//span[text()='Sell Online with Flipkart']
 
+
+Mobiles=//span[text()='Mobiles']
+appleCheckBox=//div[text()='Apple']
+customerRatings=//div[text()='4? & above']
+appleMobile=//div[text()='Apple iPhone 13 (Blue, 128 GB)']
+Cart=//span[text()='Cart']
+
+
