Added Search Products

--- a/src/main/resources/locators/Flipkart.properties
+++ b/src/main/resources/locators/Flipkart.properties
@@ -8,21 +8,14 @@ becomeASeller=//a[@title='Become a Seller'][2]
 sellonline=//span[text()='Sell Online with Flipkart']
 
 
-//button/*[name()='svg'] 
+button/*[name()='svg'] 
 
-first toy in search results=//div[@class='_4WELSP']
-
-specifications of the selected toy=//div[@class='_8tSq3v']
-
-add the toy to my cart=//button[@fdprocessedid='sidah']
-
-toy added to my cart=//div[@class='ZuSA--']
-
-Buy Now button to buy the product=//button[@fdprocessedid='r4194i'] 
-
-Delivery Payments Page=//div[@class='_9-suWS']
-
-Pay Now and complete the payment=//span[text()='Place Order']
-
-Payment Successfull=//div[contains(text(), 'Payment Successful')]
+first_toy_in_search_results=//div[@class='_4WELSP']
+specifications_of_the_selected toy=//div[@class='_8tSq3v']
+add_the_toy_to_my_cart=//button[@fdprocessedid='sidah']
+toy_added_to_my_cart=//div[@class='ZuSA--']
+Buy_Now_button_to_buy_the_product=//button[@fdprocessedid='r4194i'] 
+Delivery_Payments_Page=//div[@class='_9-suWS']
+Pay_Now_and_complete_the_payment=//span[text()='Place Order']
+Payment_Successfull=//div[contains(text(), 'Payment Successful')]
 
