Updated the flipkart pages & flipkat step definitions

--- a/src/main/resources/locators/Flipkart.properties
+++ b/src/main/resources/locators/Flipkart.properties
@@ -6,6 +6,7 @@ login_button=
 searchBar=//input[@placeholder='Search for Products, Brands and More']
 becomeASeller=//a[@title='Become a Seller'][2]
 sellonline=//span[text()='Sell Online with Flipkart']
+firstProductInSearchResultsForMobiles=//span[contains(.,'Showing')]/following::div[7]/div/div/div/a
 
 
 Mobiles=//span[text()='Mobiles']
