Updated the flipkart pages & flipkat step definitions

--- a/src/main/resources/locators/Flipkart.properties
+++ b/src/main/resources/locators/Flipkart.properties
@@ -7,6 +7,10 @@ searchBar=//input[@placeholder='Search for Products, Brands and More']
 becomeASeller=//a[@title='Become a Seller'][2]
 sellonline=//span[text()='Sell Online with Flipkart']
 firstProductInSearchResultsForMobiles=//span[contains(.,'Showing')]/following::div[7]/div/div/div/a
+specifications_header=//div[text()='Specifications']
+GoToCart_button=//button[text()='GO TO CART']
+PlaceOrder_button=//span[text()='Place Order']/parent::button
+
 
 
 Mobiles=//span[text()='Mobiles']
